--- a/preseed.cfg
+++ b/preseed.cfg
@@ -28,7 +28,8 @@ d-i clock-setup/utc boolean true
 d-i time/zone string Europe/Madrid
 d-i clock-setup/ntp boolean true
 
-### Partitioning
+### Partitioning (Modificado para /dev/sdb)
+d-i partman-auto/disk string /dev/sdb                 # <-- NUEVO: Selecciona el disco de destino /dev/sdb
 d-i partman-auto/method string lvm
 d-i partman-auto-lvm/guided_size string max
 d-i partman-lvm/device_remove_lvm boolean true
@@ -52,10 +53,10 @@ d-i pkgsel/include string vim curl
 d-i pkgsel/run_tasksel boolean false
 d-i pkgsel/upgrade select none
 
-### Boot loader installation
+### Boot loader installation (Modificado para /dev/sdb)
 d-i grub-installer/only_debian boolean true
 d-i grub-installer/with_other_os boolean true
-d-i grub-installer/bootdev string default
+d-i grub-installer/bootdev string /dev/sdb           # <-- MODIFICADO: Instala GRUB en el MBR del /dev/sdb
 
 ### Finishing up the installation
 d-i finish-install/reboot_in_progress note
